istio-network/rancher-salf-ssl/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rancher-gateway
  namespace: cattle-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - rancher.mydomain.org
      port:
        name: http
        number: 80
        protocol: HTTP
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      hosts:
        - rancher.mydomain.org
      tls:
        # mode: PASSTHROUGH
        mode: SIMPLE
        credentialName: cattle-system/tls-rancher-ingress
